tests/ui/consts/try-operator.stderr
error[E0635]: unknown feature `const_convert`
  --> $DIR/try-operator.rs:6:12
   |
LL | #![feature(const_convert)]
   |            ^^^^^^^^^^^^^

error[E0015]: `?` is not allowed on `Result<(), ()>` in constant functions
  --> $DIR/try-operator.rs:10:9
   |
LL |         Err(())?;
   |         ^^^^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error[E0015]: `?` is not allowed on `Result<bool, ()>` in constant functions
  --> $DIR/try-operator.rs:10:9
   |
LL |         Err(())?;
   |         ^^^^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error[E0015]: `?` is not allowed on `Option<()>` in constant functions
  --> $DIR/try-operator.rs:18:9
   |
LL |         None?;
   |         ^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error[E0015]: `?` is not allowed on `Option<()>` in constant functions
  --> $DIR/try-operator.rs:18:9
   |
LL |         None?;
   |         ^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0015, E0635.
For more information about an error, try `rustc --explain E0015`.
